--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="C:\Users\Administrator\Desktop\Backup.jpg" class="img-thumbnail"  alt="...">
+                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -30,7 +30,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="C:\Users\Administrator\Desktop\Backup.jpg" class="img-thumbnail"  alt="...">
+                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -44,7 +44,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="C:\Users\Administrator\Desktop\Backup.jpg" class="img-thumbnail"  alt="...">
+                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -58,7 +58,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="C:\Users\Administrator\Desktop\Backup.jpg" class="img-thumbnail"  alt="...">
+                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -72,7 +72,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="C:\Users\Administrator\Desktop\Backup.jpg" class="img-thumbnail"  alt="...">
+                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -86,7 +86,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="C:\Users\Administrator\Desktop\Backup.jpg" class="img-thumbnail"  alt="...">
+                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -100,7 +100,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="C:\Users\Administrator\Desktop\Backup.jpg" class="img-thumbnail"  alt="...">
+                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -114,7 +114,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="C:\Users\Administrator\Desktop\Backup.jpg" class="img-thumbnail"  alt="...">
+                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -128,7 +128,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="C:\Users\Administrator\Desktop\Backup.jpg" class="img-thumbnail"  alt="...">
+                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -142,7 +142,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="C:\Users\Administrator\Desktop\Backup.jpg" class="img-thumbnail"  alt="...">
+                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -156,7 +156,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="C:\Users\Administrator\Desktop\Backup.jpg" class="img-thumbnail"  alt="...">
+                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -170,7 +170,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="C:\Users\Administrator\Desktop\Backup.jpg" class="img-thumbnail"  alt="...">
+                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -184,7 +184,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="C:\Users\Administrator\Desktop\Backup.jpg" class="img-thumbnail"  alt="...">
+                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
